loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:2: error: not found: value sorteirTrouvee
while (!(sorteirTrouvee())) {c = 0;avance(); if (estSurBiscuit()) {c = c +1};
         ^