loopdowhile.Poucet1.scala.code
var c:Int = 0
while (!(sorteirTrouvee())) {c = 0;avance(); if (estSurBiscuit()) {c = c +1};
                            avance(); if (estSurBiscuit()) {c = c +1};
                            avance(); if (estSurBiscuit()) {c = c +1};
                            avance(); if (estSurBiscuit()) {c = c +1};
                            avance(); if (estSurBiscuit()) {c = c +1};
                            if (c>2) {gauche();}
                            if (c<3) {droite();}}
avance();
